fix: fix operation page test